[package]
name = "reelbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.12.0"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
async-process = "1.6.0"
substring = "1.4.5"
